Update/Improve team and notification functionalities
